# nofx

./: .env  debug_agent_init.py  diagnose_mcp_services.py  main.py  pyproject.toml  quick_diagnostic.py  test_mcp_direct.py
agent_service/: agent_astock.py
agents/: decision_maker_agent.py  stock_analyzer_agent.py
config/: constants.py
data/: .runtime_env.json  stock_data_fetcher.py
data/A_stock/: merged.jsonl
data/agent_data_astock/demo_agent/log/2025-10-15/: log.jsonl
mcp_server/: mcp_baostock_server.py
mcp_tool/: start_mcp_services.py  tool_alphavantage_news.py  tool_get_price_local.py  tool_jina_search.py  tool_math.py  tool_trade.py
models/: qwen3_235b_model.py
prompts/: prompt_astock.py
tests/: generate_test_data.py  run_demo.py  test_decision_maker.py  test_mcp_server.py  test_stock_analyzer.py  test_stock_data_fetcher.py
tests/data/A_stock/: merged.jsonl
tests/data/agent_data_astock/demo_agent/log/2025-10-15/: log.jsonl
tests/data/agent_data_astock/demo_agent/position/: position.jsonl
tools/: a_stock_config.py  a_stock_data_tools.py
tools/data/data/agent_data_astock/demo_agent/position/: position.jsonl
